# crowe-logic-cli

./: .crowelogic.keyvault.toml.example  .crowelogic.toml.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FEATURES.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  build_exe.py  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml  release.yml
agents/: code-reviewer.md
docs/: MONETIZATION.md
homebrew-tap/: README.md
homebrew-tap/Formula/: crowelogic.rb
scripts/: generate_formula.py
src/crowe_logic_cli/: __init__.py  config.py  config_file.py  cost_tracker.py  diagnostics.py  keyvault.py  licensing.py  main.py  output.py  retry.py
src/crowe_logic_cli/aicl/: __init__.py  protocol.py  serializer.py
src/crowe_logic_cli/cli/: __init__.py  agent.py  aicl.py  ask.py  chat.py  code.py  config.py  config_cmd.py  costs.py  doctor.py  history.py  interactive.py  license.py  mcp.py  molecular.py  plugins.py  quantum.py  research.py  select.py
src/crowe_logic_cli/mcp/: __init__.py  client.py  server.py
src/crowe_logic_cli/orchestrator/: __init__.py  engine.py  modes.py  multi_client.py
src/crowe_logic_cli/providers/: azure_ai_inference.py  azure_anthropic.py  azure_openai.py  base.py  factory.py  openai_compatible.py
src/crowe_logic_cli/ui/: __init__.py  console.py  diff.py  live.py  panels.py
tests/: conftest.py  test_cli.py  test_config.py  test_cost_tracker.py  test_factory.py  test_history.py  test_licensing.py  test_output.py  test_retry.py
